# TaskDeck

./: .gitignore  AGENTS.md  CHANGELOG.md  DISCLAIMER.md  LICENSE  PRIVACY.md  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: build-windows.yml  publish-windows-installer-branch.yml
app/: e2e-shot.mjs  package-lock.json  package.json
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts  widget.html
app/frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts  widget.tsx
app/frontend/src/api/: client.ts
app/frontend/src/components/: AllTasks.tsx  ArchivedCard.tsx  CalendarView.tsx  ChatPanel.tsx  CompletedModal.tsx  ConfirmModal.tsx  DeadlineTimeline.tsx  EmptyCTA.tsx  NotificationGuide.tsx  Onboarding.tsx  RegenConfirm.tsx  Reminders.tsx  SettingsModal.tsx  Sidebar.tsx  TagView.tsx  TaskItem.tsx  TaskList.tsx  WheelPicker.tsx  WheelSelect.tsx
app/frontend/src/lib/: channel.ts  confineSelection.ts  deadline.ts  env.ts  format.ts  reminders.ts  sessionCompleted.ts  useNow.ts  widgetWindow.ts
app/frontend/src/store/: chatStore.ts  useTasks.ts
app/frontend/src/styles/: tokens.css
app/frontend/src/widget/: Widget.tsx  WidgetCard.tsx  usePosture.ts  widget.css
app/frontend/tests/: reminders.test.ts
app/scripts/: build-sidecar.mjs  build-sidecar.sh
app/server/: package-lock.json  package.json
app/server/src/: config.ts  db.ts  index.ts
app/server/src/ai/: cliProvider.ts  openaiCompatProvider.ts  provider.ts  schema.ts  sdkProvider.ts
app/server/src/repo/: settingsRepo.ts  tagDefRepo.ts  taskRepo.ts
app/server/src/routes/: tasks.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json  widget.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
design/: tokens.md
doc/: api.md  architecture.md  data-model.md  milestones.md
