[package]
name = "app"
version = "1.0.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3" }
tauri-plugin-shell = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# macos-private-api: macOS 透明组件窗口所需，Windows 构建不启用。
tauri = { version = "2.11.3", features = ["macos-private-api"] }
